--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /express/chatapp/mongo/node_modules/
 /express/chatapp/sembanco/node_modules/
 /express/mongoo/node_modules/
+/tests/mocha/node_modules/
