--- a/express/chatapp/mongo/package.json
+++ b/express/chatapp/mongo/package.json
@@ -23,7 +23,11 @@
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
+    "chai": "^3.5.0",
+    "chai-http": "^3.0.0",
     "express-debug": "^1.1.1",
+    "mocha": "^3.2.0",
+    "mongoose": "^4.7.5",
     "morgan": "^1.7.0"
   }
 }
