--- a/express/stu_management/package.json
+++ b/express/stu_management/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "start": "NODE_ENV=dev node app",
-    "test": "NODE_ENV=test node_modules/mocha/bin/mocha --recursive specs/"
+    "test": "NODE_ENV=test node_modules/mocha/bin/mocha --recursive specs/",
+    "checkstyle": "node_modules/jshint/bin/jshint app.js app/ config/ specs/ || true"
   },
   "author": "Richard Brandão",
   "license": "ISC",
@@ -23,6 +24,7 @@
     "body-parser": "^1.17.1",
     "express": "^4.15.2",
     "moment": "^2.18.1",
-    "mongoose": "^4.9.4"
+    "mongoose": "^4.9.4",
+    "jshint": "^2.9.4"
   }
 }
