--- a/express/stu_management/package.json
+++ b/express/stu_management/package.json
@@ -25,6 +25,7 @@
     "express": "^4.15.2",
     "moment": "^2.18.1",
     "mongoose": "^4.9.4",
-    "jshint": "^2.9.4"
+    "jshint": "^2.9.4",
+    "mongoose-paginate": "^5.0.3"
   }
 }
