--- a/express/mysqll/docker-compose.yml
+++ b/express/mysqll/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       - "3100:3100"
     depends_on: 
       - mysql
+      - redis
   mysql:
     image: mysql
     environment: 
@@ -19,3 +20,7 @@ services:
       - MYSQL_DATABASE=herotrip
     ports:
       - "3306:3306"
+  redis:
+    image: redis
+    ports:
+      - "6379:6379"
