--- a/express/mysqll/package.json
+++ b/express/mysqll/package.json
@@ -15,7 +15,8 @@
     "express": "^4.16.3",
     "morgan": "^1.9.0",
     "mysql": "^2.15.0",
-    "promise-mysql": "^3.2.1"
+    "promise-mysql": "^3.2.1",
+    "redis": "^2.8.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
