--- a/basics/package.json
+++ b/basics/package.json
@@ -9,6 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "es6-promise": "^4.2.4",
+    "fetch": "^1.1.0",
+    "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.16.4",
     "moment": "^2.15.1",
     "mongoose": "^4.6.6",
