--- a/express/mysqll/package.json
+++ b/express/mysqll/package.json
@@ -11,10 +11,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.249.1",
     "body-parser": "^1.18.2",
+    "connect-multiparty": "^2.1.0",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "express-fileuploader": "0.0.7",
+    "express-fileuploader-s3": "0.0.1",
     "morgan": "^1.9.0",
+    "multer": "^1.3.0",
+    "multer-s3": "^2.7.0",
     "mysql": "^2.15.0",
     "promise-mysql": "^3.2.1",
     "redis": "^2.8.0"
